possible fix to gradient on mobile devices.

--- a/style/style.css
+++ b/style/style.css
@@ -25,7 +25,7 @@
 
   --spacing-m: 1.75rem;
 
-  --letter-spacing: 2px;
+  --letter-spacing: 0.125rem;
 
   --img-size: 6.5rem;
 
@@ -219,9 +219,10 @@ menu li {
   /* Makes a gradient glo surrounding the main element */
   .glow::after {
     content: '';
+    width: 100%;
+    height: 100%;
+    border-radius: var(--border-radius-400);
     position: absolute;
-    inset: 0;
-    mix-blend-mode: color-burn;
     background: conic-gradient(
       red,
       magenta,
@@ -233,7 +234,7 @@ menu li {
     );
     /* background-size needed to make it move. */
     background-size: 200% 200%;
-    filter: blur(2rem);
+    filter: blur(1rem);
     animation: moveGlow 20s alternate infinite;
     z-index: -1;
   }
